--- a/presenter/assets/css/siren.css
+++ b/presenter/assets/css/siren.css
@@ -1,9 +1,14 @@
-/*
-	sireninteractive.com
-	design: Kasia Wandowska
-	code: Rob Laucius, Kyle Knox
-	ver 20120802
-*/
+@font-face {
+    font-family: 'EBGaramondRegular';
+    src: url('fonts/EBGaramond-webfont.eot');
+    src: url('fonts/EBGaramond-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/EBGaramond-webfont.woff') format('woff'),
+         url('fonts/EBGaramond-webfont.ttf') format('truetype'),
+         url('fonts/EBGaramond-webfont.svg#EBGaramondRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
 
 html{-webkit-text-size-adjust:none;}
 body{margin:0 auto;padding:0;font:x-small Arial,sans-serif;color:#000;background-color:#fff;}
@@ -60,3 +65,12 @@ input.error, textarea.error {border-color:#B94A48 !important;color:#B94A48 !impo
 #footer ul li{display:inline;padding:2px;}
 #footer,#footer a,#footer a:link,#footer a:visited{color:#6b6353;text-decoration:none;}
 #footer a:hover,#footer a:active{text-decoration:underline;}
+
+/* slides */
+.reveal section .header img,.reveal section .footer img{border:none;background:none;margin:0;box-shadow:none;}
+
+.reveal section .header{text-align:left;border-bottom:3px solid #D98609;padding-bottom:12px;margin:6px 0 20px;}
+
+.reveal section .footer{text-align:left;vertical-align:top;border-top:3px solid #7CA32A;margin:20px 0 6px;padding-top:12px;color:#c0c0c0;font-size:0.6em;}
+.reveal section .footer p span{font-style:italic;}
+.reveal section .footer .span6:last-child{text-align:right;}
