--- a/presenter/assets/css/theme/siren.css
+++ b/presenter/assets/css/theme/siren.css
@@ -7,11 +7,11 @@
  */
 @font-face {
     font-family: 'EBGaramondRegular';
-    src: url('fonts/EBGaramond-webfont.eot');
-    src: url('fonts/EBGaramond-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/EBGaramond-webfont.woff') format('woff'),
-         url('fonts/EBGaramond-webfont.ttf') format('truetype'),
-         url('fonts/EBGaramond-webfont.svg#EBGaramondRegular') format('svg');
+    src: url('../fonts/EBGaramond-webfont.eot');
+    src: url('../fonts/EBGaramond-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/EBGaramond-webfont.woff') format('woff'),
+         url('../fonts/EBGaramond-webfont.ttf') format('truetype'),
+         url('../fonts/EBGaramond-webfont.svg#EBGaramondRegular') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -56,7 +56,7 @@ body {
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #eeeeee;
-  font-family: "League Gothic", Impact, sans-serif;
+  font-family: "EBGaramondRegular", Impact, sans-serif;
   line-height: 0.9em;
   letter-spacing: 0.02em;
   text-transform: uppercase;
@@ -180,5 +180,3 @@ body {
 .reveal section .footer{text-align:left;vertical-align:top;border-top:3px solid #7CA32A;margin:20px 0 6px;padding-top:12px;color:#c0c0c0;font-size:0.6em;}
 .reveal section .footer p span{font-style:italic;}
 .reveal section .footer .span6:last-child{text-align:right;}
-
-.reveal section .body h1,.reveal section .body h2{font-family:'EBGaramondRegular',helvetica,Arial,sans-serif;}
