--- a/presenter/assets/css/theme/siren.css
+++ b/presenter/assets/css/theme/siren.css
@@ -56,16 +56,19 @@ body {
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #eeeeee;
-  font-family: "EBGaramondRegular", Impact, sans-serif;
+  /*font-family: "EBGaramondRegular", Impact, sans-serif;*/
   line-height: 0.9em;
   letter-spacing: 0.02em;
   text-transform: uppercase;
   text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2);
 }
 
-.reveal h1 {
+.reveal h1 {font-size:3.2em;
   text-shadow: 0 1px 0 #cccccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbbbbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaaaaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 20px 20px rgba(0, 0, 0, 0.15);
 }
+.reveal h2{font-size:1.8em;}
+
+.reveal h2.subtitle{color:#ccc;}
 
 /*********************************************
  * LINKS
@@ -180,3 +183,8 @@ body {
 .reveal section .footer{text-align:left;vertical-align:top;border-top:3px solid #7CA32A;margin:20px 0 6px;padding-top:12px;color:#c0c0c0;font-size:0.6em;}
 .reveal section .footer p span{font-style:italic;}
 .reveal section .footer .span6:last-child{text-align:right;}
+
+/*********************************************
+ * TEMPLATING
+ *********************************************/
+ .reveal .byline{font-size:1.1em;color:#ccc;font-style:italic;}
