--- a/presenter/assets/css/theme/siren.css
+++ b/presenter/assets/css/theme/siren.css
@@ -38,7 +38,7 @@ body {
   color: #eeeeee;
 }
 
-.reveal .slides{max-width:1140px;width:90%;}
+.reveal .slides{max-width:1280px;width:90%;}
 
 ::selection {
   color: white;
@@ -62,13 +62,13 @@ body {
   letter-spacing: 0.02em;
   text-transform: uppercase;
   text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2);
+  word-break:normal;
 }
 
 .reveal h1 {font-size:2.8em;
   text-shadow: 0 1px 0 #cccccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbbbbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaaaaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 20px 20px rgba(0, 0, 0, 0.15);
 }
-.reveal h2{font-size:1.7em;}
-.reveal h2.subtitle{color:#ccc;}
+.reveal h2{font-size:1.7em;line-height:1.2em;color:#ccc;}
 
 .reveal section.title h1{font-size:3.2em;margin:120px 0 40px;}
 
