--- a/presenter/assets/css/theme/siren.css
+++ b/presenter/assets/css/theme/siren.css
@@ -69,6 +69,7 @@ body {
   text-shadow: 0 1px 0 #cccccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbbbbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaaaaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 20px 20px rgba(0, 0, 0, 0.15);
 }
 .reveal h2{font-size:1.7em;line-height:1.2em;color:#ccc;}
+.reveal h3{font-size:1.2em;}
 
 .reveal section.title h1{font-size:3.2em;margin:120px 0 40px;}
 
@@ -188,5 +189,6 @@ body {
  * MISC
  *********************************************/ 
  .resource{display:block;font-style:italic;color:#aaa;}
- .green{color:#7CA32A;}
- .orange{color:#D98609;}
+ .green{color:#7CA32A !important;}
+ .orange{color:#D98609 !important;}
+ span.abbr{color:#3ae;font-size:0.75em;vertical-align:bottom;}
