--- a/presenter/assets/css/theme/siren.css
+++ b/presenter/assets/css/theme/siren.css
@@ -197,16 +197,21 @@ body {
  .reveal section span.abbr{color:#3ae;font-size:0.75em;vertical-align:bottom;}
  .reveal section div.align-left{text-align:left;}
  
- .tag-cloud{width:100%;min-height:250px;max-height:900px;background-color:rgba(200,200,200,0.5);position:relative;overflow:hidden;}
- .tag-cloud span{position:absolute;display:block;top:0;left:0;display:none;font-size:0.01em;text-shadow:4px 4px 4px #333;
--webkit-transition: font-size 2500ms cubic-bezier(0.790, 0.030, 0.265, 1); /* older webkit */
--webkit-transition: font-size 2500ms cubic-bezier(0.790, 0.030, 0.265, 1.550); 
-   -moz-transition: font-size 2500ms cubic-bezier(0.790, 0.030, 0.265, 1.550); 
-    -ms-transition: font-size 2500ms cubic-bezier(0.790, 0.030, 0.265, 1.550); 
-     -o-transition: font-size 2500ms cubic-bezier(0.790, 0.030, 0.265, 1.550); 
-        transition: font-size 2500ms cubic-bezier(0.790, 0.030, 0.265, 1.550); /* custom */
+ .tag-cloud{width:100%;min-height:250px;max-height:900px;background-color:rgba(100,100,100,1);position:relative;overflow:hidden;}
+ .tag-cloud .layer{position:absolute;top:0;left:0;width:100%;height:100%;z-index:5;background-color:rgba(200,150,100,0.5);}
+ .tag-cloud .layer:nth-child(2){z-index:10;}
+ .tag-cloud .layer:nth-child(3){z-index:50;}
+ .tag-cloud .layer:nth-child(4){z-index:70;}
+ .tag-cloud span{position:absolute;display:block;top:0;left:0;display:none;font-size:0.01em;text-shadow:4px 4px 4px #333;z-index:1;
+-webkit-transition: all 2500ms cubic-bezier(0.790, 0.030, 0.265, 1); /* older webkit */
+-webkit-transition: all 2500ms cubic-bezier(0.790, 0.030, 0.265, 1.550); 
+   -moz-transition: all 2500ms cubic-bezier(0.790, 0.030, 0.265, 1.550); 
+    -ms-transition: all 2500ms cubic-bezier(0.790, 0.030, 0.265, 1.550); 
+     -o-transition: all 2500ms cubic-bezier(0.790, 0.030, 0.265, 1.550); 
+        transition: all 2500ms cubic-bezier(0.790, 0.030, 0.265, 1.550); /* custom */
 }
-.tag-cloud span.grow-xlarge{font-size:2em;}
-.tag-cloud span.grow-large{font-size:1.5em;}
-.tag-cloud span.grow-medium{font-size:1em;}
-.tag-cloud span.grow-small{font-size:0.75em;}
+.tag-cloud span.grow{z-index:100;}
+.tag-cloud span.grow.xlarge{font-size:2em;}
+.tag-cloud span.grow.large{font-size:1.5em;}
+.tag-cloud span.grow.medium{font-size:1em;}
+.tag-cloud span.grow.small{font-size:0.75em;}
