--- a/presenter/assets/css/theme/siren.css
+++ b/presenter/assets/css/theme/siren.css
@@ -191,20 +191,42 @@ body {
  * MISC
  *********************************************/
  
- .reveal section .resource{display:block;font-style:italic;color:#aaa;font-size:0.75em !important;}
- .reveal section a.resource{color:#13dacc;}
- .reveal section .green{color:#7CA32A !important;}
- .reveal section .orange{color:#D98609 !important;}
- .reveal section span.abbr{color:#3ae;font-size:0.75em;vertical-align:bottom;}
- .reveal section div.align-left{text-align:left;}
  
- .tag-cloud{width:100%;min-height:250px;max-height:900px;background-color:rgba(100,100,100,1);position:relative;overflow:hidden;}
- .tag-cloud .layer{position:absolute;top:0;left:0;width:100%;height:100%;z-index:5;background-color:rgba(200,150,100,0.5);}
- .tag-cloud .layer:nth-child(2){z-index:10;}
- .tag-cloud .layer:nth-child(3){z-index:50;}
- .tag-cloud .layer:nth-child(4){z-index:75;}
- .tag-cloud .layer:nth-child(5){z-index:99;}
- .tag-cloud span{position:absolute;display:block;top:0;left:0;display:none;font-size:0.01em;text-shadow:4px 4px 4px #333;z-index:1;
+.reveal section .resource{display:block;font-style:italic;color:#aaa;font-size:0.75em !important;}
+.reveal section a.resource{color:#13dacc;}
+.reveal section .green{color:#7CA32A !important;}
+.reveal section .orange{color:#D98609 !important;}
+.reveal section span.abbr{color:#3ae;font-size:0.75em;vertical-align:bottom;}
+.reveal section div.align-left{text-align:left;}
+ 
+.tag-cloud{width:100%;min-height:250px;max-height:900px;position:relative;overflow:hidden;box-shadow:4px 4px 40px 8px #666;}
+.tag-cloud .layer{position:absolute;top:0;left:0;width:100%;height:100%;z-index:5;background-color:transparent;background-repeat:repeat-x;background-position:0 0;background-size:cover;}
+.tag-cloud .layer:first-child{background-image:url(/assets/img/lectures/lecture1/smoke1.png);}
+.tag-cloud .layer:nth-child(2){z-index:10;background-image:url(/assets/img/lectures/lecture1/smoke2.png);
+-webkit-animation:float-ltr 120s infinite linear;
+   -moz-animation:float-ltr 120s infinite linear;
+     -o-animation:float-ltr 120s infinite linear;
+		animation:float-ltr 120s infinite linear;
+}
+.tag-cloud .layer:nth-child(3){z-index:50;background-image:url(/assets/img/lectures/lecture1/smoke3.png);
+-webkit-animation:float-ltr 70s infinite linear;
+   -moz-animation:float-ltr 70s infinite linear;
+     -o-animation:float-ltr 70s infinite linear;
+		animation:float-ltr 70s infinite linear;
+}
+.tag-cloud .layer:nth-child(4){z-index:75;background-image:url(/assets/img/lectures/lecture1/smoke4.png);
+-webkit-animation:float-ltr 35s infinite linear;
+   -moz-animation:float-ltr 35s infinite linear;
+     -o-animation:float-ltr 35s infinite linear;
+		animation:float-ltr 35s infinite linear;
+}
+.tag-cloud .layer:nth-child(5){z-index:101;background-image:url(/assets/img/lectures/lecture1/smoke5.png);
+-webkit-animation:float-ltr 25s infinite linear;
+   -moz-animation:float-ltr 25s infinite linear;
+     -o-animation:float-ltr 25s infinite linear;
+		animation:float-ltr 25s infinite linear;
+}
+.tag-cloud span{position:absolute;display:block;top:0;left:0;display:none;font-size:0.01em;text-shadow:4px 4px 4px #333;z-index:1;white-space:nowrap;
 -webkit-transition: all 2500ms cubic-bezier(0.790, 0.030, 0.265, 1); /* older webkit */
 -webkit-transition: all 2500ms cubic-bezier(0.790, 0.030, 0.265, 1.550); 
    -moz-transition: all 2500ms cubic-bezier(0.790, 0.030, 0.265, 1.550); 
@@ -217,3 +239,18 @@ body {
 .tag-cloud span.grow.large{font-size:1.5em;}
 .tag-cloud span.grow.medium{font-size:1em;}
 .tag-cloud span.grow.small{font-size:0.75em;}
+
+
+/*@-moz-keyframes float1 {}*/
+@-o-keyframes float-ltr {
+	from {background-position:0 0;}
+	to {background-position: 1280px 0;}
+}
+@-moz-keyframes float-ltr {
+	from {background-position:0 0;}
+	to {background-position: 1280px 0;}
+}
+@-webkit-keyframes float-ltr {
+	from {background-position:0 0;}
+	to {background-position: 1280px 0;}
+}
