- add js to only animate background when slide is active

--- a/presenter/assets/css/theme/siren.css
+++ b/presenter/assets/css/theme/siren.css
@@ -209,25 +209,31 @@ body {
 
 .tag-cloud .layer{position:absolute;top:0;left:0;width:100%;height:100%;z-index:5;background-color:transparent;background-repeat:repeat-x;background-position:0 0;background-size:cover;}
 .tag-cloud .layer:first-child{background-image:url(/assets/img/lectures/lecture1/smoke1.png);}
-.tag-cloud .layer:nth-child(2){z-index:10;background-image:url(/assets/img/lectures/lecture1/smoke2.png);
+.tag-cloud .layer:nth-child(2){z-index:10;background-image:url(/assets/img/lectures/lecture1/smoke2.png);}
+.tag-cloud .layer:nth-child(3){z-index:50;background-image:url(/assets/img/lectures/lecture1/smoke3.png);}
+.tag-cloud .layer:nth-child(4){z-index:75;background-image:url(/assets/img/lectures/lecture1/smoke4.png);}
+.tag-cloud .layer:nth-child(5){z-index:101;background-image:url(/assets/img/lectures/lecture1/smoke5.png);}
+
+/* if the wind is blowing */
+.tag-cloud.blowing .layer:nth-child(2){
 -webkit-animation:float-ltr 120s infinite linear;
    -moz-animation:float-ltr 120s infinite linear;
      -o-animation:float-ltr 120s infinite linear;
 		animation:float-ltr 120s infinite linear;
 }
-.tag-cloud .layer:nth-child(3){z-index:50;background-image:url(/assets/img/lectures/lecture1/smoke3.png);
+.tag-cloud.blowing .layer:nth-child(3){
 -webkit-animation:float-ltr 70s infinite linear;
    -moz-animation:float-ltr 70s infinite linear;
      -o-animation:float-ltr 70s infinite linear;
 		animation:float-ltr 70s infinite linear;
 }
-.tag-cloud .layer:nth-child(4){z-index:75;background-image:url(/assets/img/lectures/lecture1/smoke4.png);
+.tag-cloud.blowing .layer:nth-child(4){
 -webkit-animation:float-ltr 35s infinite linear;
    -moz-animation:float-ltr 35s infinite linear;
      -o-animation:float-ltr 35s infinite linear;
 		animation:float-ltr 35s infinite linear;
 }
-.tag-cloud .layer:nth-child(5){z-index:101;background-image:url(/assets/img/lectures/lecture1/smoke5.png);
+.tag-cloud.blowing .layer:nth-child(5){
 -webkit-animation:float-ltr 25s infinite linear;
    -moz-animation:float-ltr 25s infinite linear;
      -o-animation:float-ltr 25s infinite linear;
