--- a/presenter/assets/css/theme/siren.css
+++ b/presenter/assets/css/theme/siren.css
@@ -239,7 +239,23 @@ body {
      -o-animation:float-ltr 25s infinite linear;
 		animation:float-ltr 25s infinite linear;
 }
+
 .tag-cloud span{position:absolute;display:none;top:0;left:0;font-size:0.01em;text-shadow:4px 4px 4px #333;z-index:1;white-space:nowrap;
+-webkit-transform-origin: 0% 0%;
+-webkit-perspective: 200;
+-webkit-perspective-origin: 50% 50%;
+-moz-transform-origin: 0% 0%;
+-moz-perspective: 200;
+-moz-perspective-origin: 50% 50%;
+-o-transform-origin: 0% 0%;
+-o-perspective: 200;
+-o-perspective-origin: 50% 50%;
+-ms-transform-origin: 0% 0%;
+-ms-perspective: 200;
+-ms-perspective-origin: 50% 50%;
+transform-origin: 0% 0%;
+perspective: 200;
+perspective-origin: 50% 50%;
 -webkit-transition: all 2500ms cubic-bezier(0.790, 0.030, 0.265, 1); /* older webkit */
 -webkit-transition: all 2500ms cubic-bezier(0.790, 0.030, 0.265, 1.550);
    -moz-transition: all 2500ms cubic-bezier(0.790, 0.030, 0.265, 1.550);
